# SoftwareDevForAlgorithmProbs-Project1

./: CMakeLists.txt  HashTable.h  Makefile  README  cube  hashFunction.h  lsh  notes
Input/: input_custom  input_small  input_small.txt  input_verySmall.txt  modify_file.sh  query_custom  query_small  query_small.txt  query_verySmall.txt
Output/: output.txt  output_small  output_small_cosine  output_small_eucledian
header/: AHashTable.h  AHypercube.h  ComputationMethods.h  CosineHypercube.h  CubeEdge.h  CubeIndex.h  DataSetMap.h  EucledianHashTable.h  EucledianHypercube.h  HashNode.h  HashTable.h  Hypercube.h  Item.h  Util.h  cosineHashfunction.h  hashFunction.h
header/hypercube/: AHypercube.h  BinaryMap.h  CosineHypercube.h  CubeEdge.h  EucledianHypercube.h
header/lsh/: AHashTable.h  CosineHashTable.h  EucledianHashTable.h  HashNode.h  cosineHashfunction.h  hashFunction.h
izampo/: 3i_ergasia.txt  COPY_CONSTRUCTOR.txt  DEFAULT_INITIALIZE.txt  lab02-2.cpp  lab02-3-1.cpp  lab02-3-2.cpp  lab02-3-3.cpp  maps.cpp  primes1.cpp  proforiki.txt  valgrind_command.txt
izampo/ASKISEIS/Atom-izer/: Atom-izer.sln
izampo/ASKISEIS/much-classes/: much-classes.sdf  much-classes.sln
izampo/akisi_telos/: Makefile.win  Project.dev  Project.layout  atom.cpp  atom.h  main.cpp
izampo/askisi/Project/: Project.sln
izampo/askisi3/: diakrita.txt
izampo/askisi3/askisi3parad/: README.txt  antineutrino.cpp  boson.cpp  boson.h  electron.h  fermion.cpp  fermion.h  main.cpp  neutrino.cpp  neutrino.h  neutron.cpp  neutron.h  particle.cpp  particle.h  photon.cpp  positron.cpp  positron.h  proton.cpp
izampo/askisi3/inheritance_task/: inheritance_task.sln
izampo/askisi4/: App.java
izampo/new_askisi1/Project/: Project.sln
izampo/paradosi1/askisi1/: README.txt  atom.cpp  atom.h  electron.cpp  electron.h  gluon.h  main.cpp  neutron.h  nucleus.h  proton.cpp  proton.h  up_quark.h
izampo/project/: .dropbox  ergasia1.mwb  ergasia1_secondEdition.mwb
src/: AHashTable.cpp  AHypercube.cpp  BinaryMap.cpp  ComputationMethods.cpp  CosineHashTable.cpp  CosineHypercube.cpp  CubeEdge.cpp  CubeIndex.cpp  DataSetMap.cpp  EucledianHashTable.cpp  EucledianHypercube.cpp  HashNode.cpp  HashTable.cpp  Hypercube.cpp  Item.cpp  Util.cpp  cosineHashfunction.cpp  cube.cpp  hashFunction.cpp  lsh.cpp  main.cpp  query_small.txt.txt
src/hypercube/: AHypercube.cpp  BinaryMap.cpp  CosineHypercube.cpp  CubeEdge.cpp  EucledianHashTable.cpp  EucledianHypercube.cpp  cube.cpp
src/lsh/: CosineHashTable.cpp  EucledianHashTable.cpp  HashNode.cpp  cosineHashfunction.cpp  hashFunction.cpp  lsh.cpp
(+122 files in other folders)
